0.4.0 (dev)
  Experimental: -show packages required by a package OR packages that
                 depend on a package as child items in the package view
                -replaced a few package view icons with DUMMY icons and
                 added new ones for packages installed by user
  BugFix: Now Shift+F3 and F3 search keys (and also Esc) work outside 
	SearchLineEdit widget.
  BugFix: fixed freeze for install orphaned/yaourt package (thanks to 
	tbinkau).
  BugFix: fixed notify-send code in octopi-notifier (thanks to vedgy).
  BugFix: Files tab presented some nasty results sometimes and even a GPF when it
	found symlinks to directories.
  BugFix: running as root was broken in KDE.
  BugFix: The preventing code for always refresh the pkg list was flawed.
  BugFix: hasInternetConnection code fixed to improve mirror-check speed.
  BugFix: Fixed CCR (Chakra) package installation/removal (thanks to dmnmsc).
  Added parameter "sysupgrade-noconfirm" so Octopi can jump automatically 
	to distro upgrade (if any new packages available) without prompt for 
	confirmation. Also added a "Yes" button to the sysupgrade 
	confirmation dialog at octopi-notifier (thanks to wget).
  Merged Oktopi's code for using KDE icon theme, tools menu and CCR support 
	(thanks to Giuseppe Calà - gcala).
  Refactored the packageView to use a single model and a central data storage.
  Changed sorting of the first column to also include the name column as second
        sort criteria.
  Added pacman log viewer and repoeditor support in tools menu (thanks to gcala).
  Patched repoeditor to run just one instance at a time.
  The filelist search now searches directories too.
  Refactorings here and there to make it more Chakra friendly.
  Updated README file.
  Updated some icons to unclutter the UI (thanks to Anke Boersma).
  Refactoring in some code to not generate translatable strings.
  Fixed getBuildDate code to always convert dates to english format.
  Updated some translations.

0.3.2