@@ -1146,6 +1146,7 @@ void MainWindow::tvPackagesSelectionChanged(const QItemSelection&, const QItemSe
       arg(QString::number(selected));
 
   m_lblSelCounter->setText(newMessage);
+  changedTabIndex();
 }
 
 /*
