@@ -3,6 +3,8 @@
                  depend on a package as child items in the package view
                 -replaced a few package view icons with DUMMY icons and
                  added new ones for packages installed by user
+  BugFix: Package info tab will be updated correctly when using the keyboard
+    for navigation.
   BugFix: Now Shift+F3 and F3 search keys (and also Esc) work outside 
 	SearchLineEdit widget.
   BugFix: fixed freeze for install orphaned/yaourt package (thanks to 
